testsuite/tests/typecheck/should_fail/T22912.stderr
T22912.hs:17:16: error: [GHC-05617]
    • Could not solve: ‘Exactly (Implies c) => Implies c’
        arising from a use of ‘go’
    • In the expression: go
      In an equation for ‘anythingDict’:
          anythingDict
            = go
            where
                go :: (Exactly (Implies c) => Implies c) => Dict c
                go = Dict

